# Viral_MPV

./: .dockerignore  .env.downloader.example  .env.knowledge.example  .env.monitor.example  .env.processor.example  .env.profile.example  .env.script.example  .env.shell.example  .gitattributes  .gitignore  convert.py  docker-compose.yml  ПЛАН_ВИРАЛ-монитор.md  ТЗ_ВИРАЛ-монитор.docx  ТЗ_ВИРАЛ-монитор.md
Modules/downloader/: Dockerfile  apify_client.py  auth.py  cleanup.py  config.py  files_router.py  logging_setup.py  main.py  requirements.txt  state.py
Modules/knowledge/: Dockerfile  auth.py  main.py  (+6 more)
Modules/shared/llm/: pyproject.toml
Modules/shared/llm/src/viral_llm/: __init__.py
Modules/shared/llm/src/viral_llm/clients/: anthropic_claude.py  anthropic_text.py  assemblyai.py  base.py  deepgram.py  google_gemini.py  groq_whisper.py  openai_gpt4o.py  openai_text.py  openai_whisper.py  registry.py
Modules/shared/llm/src/viral_llm/keys/: bootstrap.py  crypto.py  pricing.py  resolver.py  store.py
Modules/shared/llm/tests/: test_crypto.py  test_resolver.py  test_text_clients.py  test_transcription_clients.py
deploy/: Caddyfile  README.md  bootstrap.sh  docker-compose.prod.yml  install-nginx.sh  nginx-vira.conf  sync-env.sh  update.sh
frontend/: STITCH_PROMPT.md
manuals/: monitor.md
plan/: PLAN_A2_MONITOR.md  PLAN_AI_STUDIO_DESIGN_BRIEF.md  PLAN_ANALYTICS.md  PLAN_BACKEND_DATA_AND_ANALYTICS.md  PLAN_DESIGN_PATCH.md  PLAN_MONITOR_ACTIVATION.md  PLAN_PROFILE.md  PLAN_SCRIPT.md  PLAN_SELF_LEARNING_AGENT.md  PLAN_VIDEO_DOWNLOADER.md  PLAN_VIDEO_PROCESSOR.md
(+211 files in other folders)
