[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-llm"
version = "0.1.0"
description = "LLM provider clients, keys storage and routing for Viral Monitor"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.28",
  "cryptography==43.0.3",
  "anthropic==0.39.0",
  "openai==1.54.3",
  "google-genai==0.3.0",
  "assemblyai==0.35.1",
  "deepgram-sdk==3.7.7",
  "groq==0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
